--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,38 +1,40 @@
+# GitHub Action for generating a contribution graph with a snake eating your contributions
 name: Generate Snake
 
-# Define quando a ação será executada automaticamente
+# Controls when the action will run. This action runs every 6 hours.
 on:
   schedule:
-    # A cada 6 horas
+    # Every 6 hours
     - cron: "0 */6 * * *"
 
-  # Permite executar manualmente pela aba Actions
+  # Allows manual trigger from the Actions tab
   workflow_dispatch:
 
+# The sequence of runs in this workflow
 jobs:
-  # Nome do job
+  # This workflow contains a single job called "build"
   build:
-    # Runner para executar o workflow
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Sequência de etapas para o job
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Faz o checkout do repositório
+      # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
 
-      # Gera a animação da cobra
+      # Generates the snake  
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: mamadusama
-          # Gera os arquivos na branch "output" para evitar poluir a branch principal
+          # These next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # Mostra o status da build para facilitar o debug
+      # Shows the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
-      # Faz o push das alterações (caso necessário)
+      # Push the changes
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
@@ -40,7 +42,7 @@ jobs:
           branch: master
           force: true
 
-      # Publica os arquivos na branch de saída
+      # Publishes the output to the branch
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
